[gd_scene load_steps=3 format=3 uid="uid://ccri0pqhesf04"]

[ext_resource type="Script" path="res://Resources/DCPopup.gd" id="1_xb3ih"]
[ext_resource type="AnimationLibrary" uid="uid://b0bketi7rqh3c" path="res://Resources/DCPopupAnimationLibrary.tres" id="2_uvykk"]

[node name="PauseOverlay" type="CanvasLayer"]
layer = 20
visible = false
offset = Vector2(640, 360)
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 640, 360)
script = ExtResource("1_xb3ih")

[node name="MouseBlocker" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = -0.125
anchor_top = -0.125
anchor_right = 0.125
anchor_bottom = 0.125
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="BackgroundAnchor" type="Node2D" parent="."]
scale = Vector2(1, 1e-05)

[node name="MarginContainer" type="MarginContainer" parent="BackgroundAnchor"]
custom_minimum_size = Vector2(320, 80)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -40.0
offset_right = 160.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="BackgroundAnchor/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="ContentsAnchor" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": ExtResource("2_uvykk")
}
